<resources>
    <!-- Toolbar -->
    <string name="app_name">Cash</string>
    <string name="add_category">Add category</string>
    <string name="add_payment">Add payment</string>
    <string name="remove_category">Remove category</string>
    <string name="remove_speending">Remove speending</string>
    <string name="remove_payment">Remove payment</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>

    <!-- Main Activity -->
    <string name="spent_money">Spent money:</string>
    <string name="spent_money_var">$</string>
    <string name="filter_mounth">Filter month</string>
    <string name="label_monthly_budget">Monthly budget</string>
    <string name="label_budget_spent">Budget spent</string>
    <string name="title_category">All categories</string>


    <!-- Pin Activity -->
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">Security</string>

    <!-- Preferencias Activity -->
    <string name="pref_checkbox_pin">Disable PIN</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_sumary">Change the password of the PIN</string>
    <string name="pref_usuario_title">User</string>
    <string name="pref_usuario_sumary">Your Username</string>
    <string name="pref_general">General</string>
    <string name="pref_pin">Pin</string>
    <string name="pref_app">Application</string>
    <string name="pref_budget_title">Budget</string>
    <string name="pref_budget_sumary">Your Budger of the Month</string>

    <!-- Activity alta -->
    <string name="label_category">Category</string>
    <string name="label_badget">Budget</string>
    <string name="button_add_category">Add category</string>
    <string name="label_spending">Spending</string>
    <string name="label_payment">Payment</string>
    <string name="label_description">Description</string>
    <string name="label_id">Id</string>
    <string name="label_money">Money</string>
    <string name="label_date">Date</string>
    <string name="add_spending">Add Speending</string>
    <string name="label_typePay">Type of pay</string>
    <string name="add_typePay">Add type of pay</string>


</resources>
