<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.27">

        <ImageButton
            android:id="@+id/boton_eliminar"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_borrar"
            android:background="@color/color_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pago_descripcion_remove"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/pago_categoria_remove"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/label_category"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/pago_tipo_pago_remove"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/label_typePay"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/pago_monto_remove"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/label_money"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/pago_fecha_remove"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/label_date"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/pago_id_remove"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:text="@string/label_id"
                android:textColor="@color/grey"
                android:textSize="22sp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
