<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gasto_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textSize="18sp"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/gasto_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_category"
                android:textSize="18sp"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/gasto_tipoPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_typePay"
                android:textSize="18sp"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/gasto_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_date"
                android:textSize="18sp"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/gasto_monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_money"
                android:textSize="18sp"
                android:textColor="@color/grey"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
