<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_weight="0.04">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1"
            android:background="@color/grey">

            <TextView
                android:id="@+id/categoria_categoria_remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_category"
                android:textColor="@color/color_black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/categoria_presupuesto_remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.39"
                android:text="@string/label_monthly_budget"
                android:textColor="@color/color_green"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/categoria_monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.39"
                android:text="@string/label_budget_spent"
                android:textColor="@color/color_pink"
                android:textSize="22sp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
