<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alta_tipo_pago"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bobbio.martin.a00_agendagastos.AltaTipoPago">

    <TextView
        android:id="@+id/etiqueta_tipoPago1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_payment"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/etiqueta_tipoPago1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/label_typePay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etiqueta_TipoPago" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_typePay"
                android:id="@+id/tipoPago" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/add_typePay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boton_alta"
                android:onClick="alta"/>
        

        </TableRow>


    </TableLayout>

</RelativeLayout>

